--- a/.github/workflows/AWSConnectionWithOIDC.yml
+++ b/.github/workflows/AWSConnectionWithOIDC.yml
@@ -1,4 +1,4 @@
-name: AWS example workflow
+name: AWS OIDC Connect Demo
 on:
   push
 env:
@@ -7,7 +7,7 @@ permissions:
       id-token: write   # This is required for requesting the JWT
       contents: read    # This is required for actions/checkout
 jobs:
-  S3PackageUpload:
+  DemoOIDC:
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
@@ -20,8 +20,8 @@ jobs:
           role-session-name: samplerolesession
           aws-region: ${{ env.AWS_REGION }}
 
-    - name: Print AWS SSM Parameter
-      run: aws ssm get-parameter --name=hello_aws-gh-oidc --query Parameter.Value
+      - name: Print AWS SSM Parameter
+        run: aws ssm get-parameter --name=hello_aws-gh-oidc --query Parameter.Value
 
-    - name: Print assumed role
-      run: aws sts get-caller-identity
+      - name: Print assumed role
+        run: aws sts get-caller-identity
