--- a/.github/workflows/AWSConnectionWithOIDC.yml
+++ b/.github/workflows/AWSConnectionWithOIDC.yml
@@ -10,7 +10,7 @@ permissions:
       contents: read    # This is required for actions/checkout
 jobs:
   DemoOIDC:
-    runs-on: cloudquicklab
+    runs-on: self-hosted
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
