--- a/.github/workflows/AWSConnectionWithOIDC.yml
+++ b/.github/workflows/AWSConnectionWithOIDC.yml
@@ -4,7 +4,7 @@ name: AWS OIDC Connect Demo
 on:
   push
 env:
-  AWS_REGION : "eu-west-2"   
+  AWS_REGION : "us-east-1"   
 permissions:
       id-token: write   # This is required for requesting the JWT
       contents: read    # This is required for actions/checkout
