--- a/.github/workflows/AWSConnectionWithOIDC.yml
+++ b/.github/workflows/AWSConnectionWithOIDC.yml
@@ -6,7 +6,7 @@ on:
 env:
   AWS_REGION : "eu-west-2"   
 permissions:
-      id-token: write   # This is required for requesting the JW
+      id-token: write   # This is required for requesting the PPA
       contents: read    # This is required for actions/checkout
 jobs:
   DemoOIDC:
