--- a/.github/workflows/AWSConnectionWithOIDC.yml
+++ b/.github/workflows/AWSConnectionWithOIDC.yml
@@ -9,7 +9,7 @@ permissions:
       id-token: write   # This is required for requesting the PPA
       contents: read    # This is required for actions/checkout
 jobs:
-  DemoOIDC:
+  Learning AWS Part 1:
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
