--- a/.github/workflows/AWSConnectionWithOIDC.yml
+++ b/.github/workflows/AWSConnectionWithOIDC.yml
@@ -8,7 +8,7 @@ permissions:
       contents: read
 jobs:
   DemoOIDC:
-    runs-on: demo
+    runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
