--- a/.github/workflows/AWSConnectionWithOIDC.yml
+++ b/.github/workflows/AWSConnectionWithOIDC.yml
@@ -16,8 +16,8 @@ jobs:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::357171621133:role/github-oidc-role
-          role-session-name: samplerolesession
+          role-to-assume: ${{ vars.ARN }}
+          role-session-name: ${{ secrets.ROLENAME }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Print AWS SSM Parameter
